# Agentic_AI_RAG_LLM

./: Simple_RAG_Pipelineh.ipynb
RAG/: README.md  pyproject.toml
RAG/notebooks/: document.ipynb
data/vector_store/7a30b096-8d00-406f-9c59-f9b8f747b8ab/: index_metadata.pickle
notebook/: Full_RAG_Pipeline.ipynb
